adds basic css file and links it from the html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head >
+<link rel="stylesheet" href= "style.css" >
+</head>
 <body>
       <h1>This is my GIT working directory  </h1>
 
@@ -9,6 +11,6 @@
 
 </body>
 
-</head>
+
 
 </html>
