mkdirectory script and move scripts.js file to it and fixes the html file to reflect the new moved files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head >
-<link rel="stylesheet" href= "style.css" >
+<link rel="stylesheet" href= "style/style.css" >
 </head>
 <body>
       <h1>This is my GIT working directory  </h1>
@@ -11,6 +11,6 @@
 
 </body>
 
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 
 </html>
